Improve readability of one-liner by extracting variables